# tdtomonapari

./: README.md  setup.cfg  setup.py
conda/: conda.yaml
tdtomonapari/: __init__.py  magic.py  napari.yaml  registration.py
tdtomonapari/napari/: base.py  gpu.py  io.py  layer.py  log.py  main.py  phantoms.py  tiltschemes.py  variables.py
tdtomonapari/napari/acquire/: __init__.py  base.py
tdtomonapari/napari/acquire/controls/: __init__.py  connect.py  scan.py  stage.py
tdtomonapari/napari/acquire/devices/: new.py
tdtomonapari/napari/acquire/layer_widgets/: scanwindow.py
tdtomonapari/napari/acquire/napari/processes/: instrument.py
tdtomonapari/napari/acquire/processes/: __init__.py  connect.py  experiment.py  instrument.py  microscope.py  scan.py
tdtomonapari/napari/base/: base.py  utils.py
tdtomonapari/napari/base/components/: __init__.py  combobox.py  progress.py
tdtomonapari/napari/base/graphs/: __init__.py
tdtomonapari/napari/base/layer_widgets/: layerselect.py  sinogram.py  volume.py
tdtomonapari/napari/base/plugins/: graphing.py  layerselect.py  process.py  tiltselect.py
tdtomonapari/napari/base/process_widgets/: align.py  process.py  reconstruct.py
