[metadata]
name = tdtomonapari
version = attr: ttomonapari.__version__
license = None
author = Timothy Craig
author_email = tcraig258@gmail.com
description = A collection of base data types, widgets and  functions for tomography
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EMAT-tomography/tomotools
project_urls =
    Bug Tracker = https://github.com/EMAT-tomography/tomotools/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = ttomonapari
python_requires = >=3.10
install_requires =
    numpy
    matplotlib
    scipy
    imageio
    progress

[options.entry_points]
napari.manifest =
    ttnapari = ttomonapari:napari.yaml